# filecrypter

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_USER.md  cliff.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  codeql.yml  pre-release.yml  release.yml
src/: App.vue  constants.ts  main.ts  shared.css
src-tauri/: .gitignore  Cargo.toml  build_output.txt  tauri.conf.json  test_output.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs
src-tauri/src/commands/: archive.rs  batch.rs  command_utils.rs  decrypt.rs  encrypt.rs  file_utils.rs  keyfile.rs  mod.rs  streaming.rs
src-tauri/src/crypto/: cipher.rs  compression.rs  format.rs  kdf.rs  keyfile.rs  mod.rs  secure.rs  streaming.rs
src-tauri/src/security/: mod.rs  windows_acl.rs
src-tauri/tests/: integration_test.rs
src/components/: BatchTab.vue  BottomNav.vue  ChangelogAction.vue  CryptoOperationForm.vue  DecryptTab.vue  EncryptTab.vue  HelpTab.vue  KeyFileSection.vue  OverwriteCheckbox.vue  PasswordSection.vue  PasswordStrengthMeter.vue  ProgressBar.vue  RecipientShareKit.vue  SettingsTab.vue  StatusMessage.vue  UpdateNotification.vue
src/components/icons/: IconEye.vue  IconEyeOff.vue
src/composables/: useCryptoOperation.ts  useDragDrop.ts  useFileOps.ts  usePasswordStrength.ts  usePasswordVisibility.ts  usePlatform.ts  useProgress.ts  useSettings.ts  useSettingsSync.ts  useTauri.ts  useTheme.ts  useUpdater.ts  useVersion.ts
src/types/: crypto.ts  tabs.ts
src/utils/: clipboard.ts  errorSanitizer.ts
