[package]
name = "filecypter"
version = "0.1.0"
description = "Secure cross-platform file encryption desktop application"
authors = ["Justin High"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "filecypter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core dependencies
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography - AES-256-GCM encryption with Argon2id key derivation
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9.2"
zeroize = { version = "1", features = ["derive"] }
blake3 = "1"
tempfile = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"

[dev-dependencies]
