[package]
name = "filecrypter"
version = "0.1.18"
description = "Secure cross-platform file encryption desktop application"
authors = ["Justin High"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "filecrypter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core dependencies
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


# Cryptography - AES-256-GCM encryption with Argon2id key derivation
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9.2"
zeroize = { version = "1", features = ["derive"] }
blake3 = "1"
tempfile = "3"

# Compression
zstd = "0.13"
zstd-safe = "7.2"

# Archiving (for batch mode)
tar = "0.4"
chrono = "0.4"

# Error handling
thiserror = "2"

# Logging
log = "0.4"
tauri-plugin-os = "2.3.2"

# Desktop-only dependencies (updater not supported on mobile)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

[dev-dependencies]
